# whypa

./: .gitignore  Cargo.toml  HYPERVISOR_LEARNING_PATH.md  IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGEMENT_GUIDE.md
src/: acpi.rs  bootparam.rs  byte_order.rs  config.rs  cpu.rs  device_manager.rs  emulator.rs  linux_boot.rs  main.rs  memory.rs  partition.rs  terminal.rs  virtio.rs  vm.rs
src/devices/: bus.rs  event.rs  file_traits.rs  mod.rs
src/devices/legacy/: ioapic.rs  irqchip.rs  mod.rs  simple_irqchip.rs
src/devices/virtio/: bindings.rs  descriptor_utils.rs  device.rs  mmio.rs  mmio_adapter.rs  mod.rs  queue.rs
src/devices/virtio/block/: device.rs  mod.rs  worker.rs
src/devices/virtio/console/: device.rs  mod.rs  worker.rs
src/devices/virtio/net/: device.rs  gvproxy.rs  mod.rs  worker.rs
src/devices/virtio/rng/: device.rs  mod.rs  worker.rs
src/memory/: layout.rs  memory.rs  mod.rs
vm-memory/: Cargo.toml
vm-memory/src/: atomic.rs  io.rs  lib.rs
vm-memory/src/bitmap/: mod.rs
vm-memory/src/mmap/: mod.rs  windows.rs
