[package]
name = "whypa"
version = "0.0.1"
edition = "2024"
description = "Windows-only application"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
windows = { version = "0.62.2", features = ["Win32_System_Hypervisor", "Win32_System_Memory", "Win32_Foundation", "Win32_Security"] }