[package]
name = "vm-memory"
version = "0.17.1"
edition = "2024"

[dependencies]
arc-swap = { version = "1.0.0" }
libc = "0.2"
thiserror = "2.0.16"
windows-sys = { version = "0.61.2", features = ["Win32_Storage", "Win32_Networking", "Win32_Storage_FileSystem", "Win32_Networking_WinSock", "Win32_System_IO"] }
winapi = { version = "0.3", features = ["errhandlingapi", "sysinfoapi", "memoryapi"] }

[features]
backend-mmap = []